# mqtt-data-bridge

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_10_17_0001_create_medicoes.py
mqtt-data-bridge/config/: settings.py
mqtt_data_bridge/api/: main.py  schemas.py
mqtt_data_bridge/config/: settings.py
mqtt_data_bridge/core/: schemas.py
mqtt_data_bridge/database/: modelagem_banco.py  repositorio.py
mqtt_data_bridge/mqtt/: consumer.py
mqtt_data_bridge/mqtt/simulator/: publisher.py
mqtt_data_bridge/utils/: logger.py
tests/: conftest.py  test_converter_payload.py  test_medicao_repositorio.py
